# twitch-tui

./: .editorconfig  .env_example  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SECURITY.md  TODO.md  chan.txt  cli.yml  default-config.toml  deny.toml  flake.nix  index.html  out.txt  print.html  renovate.json  rustfmt.toml  searcher-c2a407aa.js  searchindex-2093bf85.js  searchindex-d2147c24.js  searchindex-dc21b787.js  searchindex.js  searchindex.json  toc-ca4a8495.js  toc.html  toc.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  build-test.yml  catjam.yml  ci.yml  flakehub-publish-tagged.yml  flakehub.yml  greetings.yml  lint.yml  mdBook.yml  mdbook.yml  publish.yml  release.yml  rust.yml  rustdoc.yml  status_embed.yml
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/guide/: README.md  configuration.md  flake.md  installation.md
book/src/keybinds/: README.md  dashboard.md  insert.md  normal.md
guide/: configuration.html  index.html  installation.html
keybinds/: index.html  insert.html  normal.html
src/: app.rs  commands.rs  context.rs  input.rs  logging.rs  main.rs  terminal.rs  tui.rs  twitch.rs
src/cli/: args.rs  interactive.rs  mod.rs
src/config/: core.rs  filters.rs  frontend.rs  keybinds.rs  mod.rs  persistence.rs  terminal.rs
src/emotes/: downloader.rs  graphics_protocol.rs  kitty.rs  mod.rs
src/events/: event.rs  event_loop.rs  key.rs  mod.rs
src/handlers/: app.rs  args.rs  config.rs  context.rs  data.rs  database.rs  event.rs  filter.rs  filters.rs  interactive.rs  mod.rs  scroll.rs  state.rs  storage.rs
src/handlers/config/: core.rs  filters.rs  frontend.rs  keybinds.rs  logs.rs  mod.rs  persistance.rs  persistence.rs  storage.rs  terminal.rs  twitch.rs
src/handlers/user_input/: events.rs  input.rs  mod.rs  scrolling.rs
src/twitch/: actions.rs  badges.rs  channels.rs  client.rs  commands.rs  connection.rs  context.rs  messages.rs  mod.rs  models.rs  oauth.rs  roomstate.rs  websocket.rs
src/twitch/api/: channel_information.rs  channels.rs  chat_settings.rs  clear.rs  commercial.rs  event_sub.rs  following.rs  messages.rs  mod.rs  mods.rs  raids.rs  shoutouts.rs  subscriptions.rs  timeouts.rs  vips.rs
src/twitch/handlers/: event_loop.rs  incoming_message.rs  message_commands.rs  mod.rs  send_message.rs  twitch_commands.rs  welcome_message.rs
src/twitch/tests/: commands.rs  mod.rs  parse_commands.rs  utils.rs
src/twitch/tests/messages/: badges.rs  cheers.rs  emotes.rs  messages.rs  mod.rs
src/twitch/tests/messages/data/: invalid_badges.json  no_badges.json
src/twitch/tests/notifications/: badges.rs  bans.rs  cheers.rs  commands.rs  emotes.rs  message_fragments.rs  mod.rs  notifications.rs  reply.rs
src/twitch/tests/notifications/data/: badges.json  cheer.json  clear_command.json  emote.json  invalid_cheer.json  many_emotes.json  me_command.json  message_text_emote_fragments.json  message_text_mention_fragments.json  no_badges.json  reply.json  user_ban.json  user_timeout.json
src/twitch/tests/subscriptions/: mod.rs
src/ui/: chat.rs  commands.rs  error.rs  help.rs  input.rs  keybinds.rs  keys.rs  mod.rs  render.rs  statics.rs
src/ui/chunks/: chatting.rs  message_search.rs  mod.rs
src/ui/components/: channel_switcher.rs  channels.rs  chat.rs  chat_input.rs  chatting.rs  component.rs  dashboard.rs  debug.rs  emote_picker.rs  error.rs  following.rs  help.rs  message_search.rs  mod.rs  state_tabs.rs
src/ui/components/chunks/: chatting.rs  debug.rs  help.rs  mod.rs  states.rs
src/ui/components/dashboard/: mod.rs  start.rs
src/ui/components/popups/: channels.rs  help.rs  mod.rs
src/ui/components/utils/: input_boxes.rs  input_widget.rs  insert_box.rs  mod.rs  popups.rs  search_widget.rs
src/ui/popups/: channels.rs  filters.rs  help.rs  messages.rs  mod.rs
src/ui/utils/: input_boxes.rs  mod.rs  popups.rs
src/utils/: app.rs  colors.rs  emotes.rs  event.rs  mod.rs  pathing.rs  sanitization.rs  search.rs  styles.rs  text.rs  titles.rs  tmp.rs
twitch_irc/: Cargo.toml
twitch_irc/src/: badges.rs
twitch_tui/: Cargo.toml
twitch_tui/src/: main.rs
twitch_tui/src/emotes/: downloader.rs
twitch_tui/src/handlers/: app.rs  args.rs  mod.rs  state.rs
twitch_tui/src/handlers/user_input/: events.rs  mod.rs  scrolling.rs
twitch_tui/src/ui/: mod.rs  statics.rs
twitch_tui/src/ui/components/: channel_switcher.rs  help.rs  mod.rs
twitch_tui/src/utils/: colors.rs  styles.rs
