[package]
name = "twitch-tui"
version = "2.6.15"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
rust-version = "1.75.0"
description = "Twitch chat in the terminal."
documentation = "https://github.com/Xithrius/twitch-tui"
homepage = "https://github.com/Xithrius/twitch-tui"
repository = "https://github.com/Xithrius/twitch-tui"
license = "MIT OR Apache-2.0"
keywords = ["tui", "twitch"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
tui = { package = "ratatui", version = "0.28.0", default-features = false, features = [
  "crossterm",
  "serde",
  "underline-color",
] }
tokio = { version = "1.39.2", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "fs",
] }
clap = { version = "4.5.16", features = ["derive", "cargo"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
unicode-width = "0.1.13"
unicode-segmentation = "1.11.0"
chrono = "0.4.38"
irc = "1.0.0"
futures = "0.3.30"
toml = "0.8.19"
textwrap = "0.16.1"
rustyline = "14.0.0"
fuzzy-matcher = "0.3.7"
regex = "1.10.6"
color-eyre = "0.6.3"
log = "0.4.22"
fern = "0.6.2"
dialoguer = { version = "0.11.0", default-features = false }
reqwest = { version = "0.12.5", features = ["json"] }
image = "0.24.8"
base64 = "0.22.1"
tempfile = "3.12.0"
serde_with = "3.9.0"
once_cell = "1.19.0"
webbrowser = "1.0.1"
memchr = "2.7.4"
webp-animation = { version = "0.9.0", features = ["image"] }

[features]
static-webp = ["webp-animation/static"]

[[bin]]
bench = false
path = "src/main.rs"
name = "twt"

[profile.dev]
lto = "off"

[profile.release]
lto = "thin"
debug = 1
