[package]
name = "twitch-tui"
version = "2.6.19"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "Twitch chat in the terminal."
documentation = "https://github.com/Xithrius/twitch-tui"
homepage = "https://github.com/Xithrius/twitch-tui"
repository = "https://github.com/Xithrius/twitch-tui"
license = "MIT OR Apache-2.0"
keywords = ["tui", "twitch"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
tokio = { version = "1.44.2", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
clap = { version = "4.5.23", features = ["derive", "cargo"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
unicode-width = "0.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.12.0"
chrono = "0.4.39"
futures = "0.3.31"
toml = "0.8.19"
textwrap = "0.16.1"
rustyline = "15.0.0"
fuzzy-matcher = "0.3.7"
regex = "1.11.1"
color-eyre = "0.6.3"
dialoguer = { version = "0.11.0", default-features = false }
reqwest = { version = "0.12.9", features = ["json"] }
image = "0.25.5"
base64 = "0.22.1"
tempfile = "3.14.0"
serde_with = "3.11.0"
webbrowser = "1.0.3"
memchr = "2.7.4"

[target.'cfg(not(windows))'.dependencies]
tui = { package = "ratatui", version = "0.29.0", default-features = false, features = [
    "crossterm",
    "serde",
    "underline-color",
] }

[target.'cfg(windows)'.dependencies]
tui = { package = "ratatui", version = "0.29.0", default-features = false, features = [
    "crossterm",
    "serde",
] }

[[bin]]
bench = false
path = "src/main.rs"
name = "twt"

[profile.dev]
lto = "off"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
