[package]
name = "twitch-tui"
version = "3.0.0-alpha.1"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "Twitch chat in the terminal."
documentation = "https://github.com/Xithrius/twitch-tui"
homepage = "https://github.com/Xithrius/twitch-tui"
repository = "https://github.com/Xithrius/twitch-tui"
license = "MIT OR Apache-2.0"
keywords = ["tui", "twitch"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.44.2", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
clap = { version = "4.5.37", features = ["derive", "cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
unicode-width = "0.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.12.0"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
toml = "0.8.22"
textwrap = "0.16.2"
rustyline = "15.0.0"
fuzzy-matcher = "0.3.7"
regex = "1.11.1"
color-eyre = "0.6.3"
dialoguer = { version = "0.11.0", default-features = false }
reqwest = { version = "0.12.15", features = ["json"] }
image = "0.25.6"
base64 = "0.22.1"
tempfile = "3.19.1"
serde_with = "3.12.0"
webbrowser = "1.0.4"
memchr = "2.7.4"

[target.'cfg(not(windows))'.dependencies]
tui = { package = "ratatui", version = "0.29.0", default-features = false, features = [
    "crossterm",
    "serde",
    "underline-color",
] }

[target.'cfg(windows)'.dependencies]
tui = { package = "ratatui", version = "0.29.0", default-features = false, features = [
    "crossterm",
    "serde",
] }

[[bin]]
bench = false
path = "src/main.rs"
name = "twt"

[profile.dev]
lto = "off"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
