[package]
name = "twitch-irc"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
rust-version = "1.61.0"
description = "IRC connection to Twitch."
repository = "https://github.com/Xithrius/twitch-tui/twitch_irc"
license = "MIT OR Apache-2.0"
keywords = ["twitch", "irc"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.28.1", features = [ "rt", "macros", "rt-multi-thread", "fs" ] }
serde = { version = "1.0.163", features = [ "derive" ] }
serde_json = "1.0.96"
unicode-width = "0.1.10"
unicode-segmentation = "1.10.1"
chrono = "0.4.24"
irc = "0.15.0"
futures = "0.3.28"
toml = "0.7.4"
regex = "1.8.2"
color-eyre = "0.6.2"
log = "0.4.17"
fern = "0.6.2"
reqwest = { version = "0.11.18", features = ["json"]}
image = "0.24.6"
base64 = "0.21.1"
tempfile = "3.5.0"
anyhow = "1.0.71"
serde_with = "3.0.0"
